--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,6 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+
+  <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
 
 <body>
@@ -28,6 +30,8 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <script src="jquery-3.2.1.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
