--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,7 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <!-- <title>曹力升的简历</title> -->
+  <title>React APP</title>
 
   <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
