--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,6 +32,7 @@
   </noscript>
   <div id="root"></div>
   <script src="jquery-3.2.1.min.js"></script>
+  <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
   <!--
       This HTML file is a template.
