成绩单,真是回忆啊

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <!-- <title>曹力升的简历</title> -->
-  <title>React APP</title>
+  <title>Profiles</title>
 
   <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
