--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,6 +31,9 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <script src="jquery-3.3.1.min.js"></script>
+  <script src="popper.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
